--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'com.google.gms.google-services' 
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -40,6 +41,7 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.flutterapp12"
         minSdkVersion 16
+        multiDexEnabled true
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -64,4 +66,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+        implementation 'com.google.firebase:firebase-analytics:17.2.1'
+        //For Firebase Analytics Service
+        implementation 'com.google.firebase:firebase-auth:19.2.0'
+        //For Firebase Authentication Service
+        implementation 'com.google.firebase:firebase-firestore:21.3.1'
+        //For Firebase Firestore Database Service
+        implementation 'com.android.support:multidex:1.0.3'
 }
